--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Gaggu</title>
 </head>
 <body>
-<h1> Hello Gaggu hey hey hey this is my first website.</h1>
+<h1> Hello Gaggu hey. This is my first website.</h1>
 </body>
 </html>
